# Energy-Scout

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  app.py  wsgi.py
docker/: docker-compose.yml
foundry/: README.md  __init__.py  foundry_client.py
foundry/tests/: test_foundry_client.py
models/: __init__.py
models/anomaly/: consumption_anomaly.py
models/ensemble/: __init__.py  demand_forecaster.py
monitoring/: __init__.py
pipeline/: __init__.py  feature_engineering.py
pipeline/airflow/: __init__.py  retrain_dag.py
scripts/: train.py
tests/: __init__.py  conftest.py  test_api.py  test_feature_engineering.py
