[project]
name = "energy-scout"
version = "1.0.0"
description = "ML-powered energy demand forecasting and anomaly detection API with Palantir Foundry integration"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "F401", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]
"scripts/**" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "scripts/*", "pipeline/airflow/*", "docker/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
